[PLAT-8407][PLAT-8408]: Fix to ensure node name is seen on the graph and resolved recommendation does not get reset when filtering by DB or Suggestion type
Summary:
1. Node name in some of suggestion types is too lengthly and it gets clipped
2. Resolved recommendations are "unresolved" if "Recommendation Filter" is changed
3. Changed the look and feel of Dropdown from old component to new redesign component

Test Plan:
Please refer to the screenshot
{F36625}

{F36626}

{F36627}

Reviewers: kkannan, lsangappa, asathyan, jmak

Reviewed By: jmak

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24523

--- a/managed/ui/src/components/queries/PerfAdvisor.scss
+++ b/managed/ui/src/components/queries/PerfAdvisor.scss
@@ -169,6 +169,6 @@
 
 .filterDropdowns {
   max-width: 280px;
-  margin: 0px 16px 4px 0px;
   flex: 1 0 20%;
+  margin-right: 8px !important;
 }
